Mobile - Works popup page swiper fixed, But router-link jump other WorkPopup pages now is bad function(window.reload). This pendding fix.

--- a/src/scss/pages/_works.scss
+++ b/src/scss/pages/_works.scss
@@ -438,7 +438,21 @@
                 height: 755px;
                 float: left;
                 font-size: 0;
+                position: relative;
                 img{max-width: 100%;}
+                .pic{
+                    height: 100%;
+                    background-repeat: no-repeat;
+                    background-position: 50%;
+                    background-size: contain;
+                }
+                .swiper-container{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                }
                 @include SCREEN_1366{
                     width: 974px;
                     height: 654px;
@@ -451,15 +465,6 @@
                     width: 100%;
                     height: auto;
                     padding: 0 10px;
-                }
-                .swiper-pagination{
-                    display: none;
-                    @include SCREEN_736{
-                        display: block;
-                        position: static;
-                        margin-top: 20px;
-                        margin-bottom: 60px;
-                    }
                 }
             }
             .swiperBtn{
@@ -519,7 +524,7 @@
             }
             .mobileBg{
                 width: 100%;
-                padding-top: 53%;
+                padding-top: 32%;
                 position: absolute;
                 bottom: 0;
                 left: 0;
@@ -528,6 +533,15 @@
         }
         .swiperRightBtn{
             transform: scale(-1, 1);
+        }
+        .swiper-pagination{
+            display: none;
+            @include SCREEN_736{
+                display: block;
+                position: static;
+                margin-top: 10px;
+                margin-bottom: 60px;
+            }
         }
 
         .designConceptContent{
